# hubspot_API

./: .env  .gitignore  README.md  ideas.txt  pyproject.toml  requirements.txt
app/: __init__.py  dependencies.py  main.py
app/api/: __init__.py  admin_crm_router.py  crm_field_mapping_router.py  crm_webhook_router.py  error_handlers.py  router.py  tenant_crm_router.py
app/api/schemas/: common.py  crm_field_mapping.py
app/config/: __init__.py  settings.py
app/db/: __init__.py  database.py
app/domain/: __init__.py
app/domain/events/: __init__.py  company_events.py  domain_event.py  event_bus.py
app/domain/models/: __init__.py  company.py  contact.py  opportunity.py
app/domain/repositories/: __init__.py  company_repository.py  contact_repository.py  opportunity_repository.py
app/domain/services/: __init__.py  company_service.py  contact_service.py  opportunity_service.py
app/integrations/: __init__.py
app/integrations/credentials/: __init__.py  crm_credentials_store.py
app/integrations/crm/: __init__.py  crm_client.py  crm_client_factory.py  crm_types.py
app/integrations/crm/hubspot/: __init__.py  hubspot_api.py  hubspot_auth.py  hubspot_client.py  hubspot_refresh.py
app/integrations/mapping/: __init__.py  crm_account_links_repository.py  crm_contact_links_repository.py  crm_field_mapping_engine.py  crm_field_mappings_repository.py  crm_opportunity_links_repository.py
app/integrations/sync/: __init__.py  crm_sync_listener.py  crm_sync_service.py
app/integrations/webhooks/: hubspot_company_webhook_processor.py  webhook_idempotency_repository.py  webhook_security.py
app/security/: auth.py
(+13 files in other folders)
